--- a/ShirokarasNotebook/environment/client/ShiroKarasClientConfig-Debug.plist
+++ b/ShirokarasNotebook/environment/client/ShiroKarasClientConfig-Debug.plist
@@ -3,28 +3,26 @@
 <plist version="1.0">
 <dict>
 	<key>AppStoreID</key>
-	<string>1282231162</string>
+	<string>1311421740</string>
 	<key>ShareSDKAppKey</key>
-	<string>1f39e1d17460a</string>
+	<string>22b5c39ea530a</string>
 	<key>SSDKPlatformTypeSinaWeiboAppKey</key>
-	<string>3339181339</string>
+	<string>2564292504</string>
 	<key>SSDKPlatformTypeSinaWeiboAppSecret</key>
-	<string>98308d3fb2ad463b8282c8b41b4c054a</string>
+	<string>68c05dd1bc3a7a29003352d4de903ef7</string>
 	<key>SSDKPlatformTypeSinaWeiboRedirectUri</key>
 	<string>http://www.sharesdk.cn</string>
 	<key>SSDKPlatformTypeWechatAppId</key>
-	<string>wxdba84b2b97ae42e4</string>
+	<string>wx823b3364e93fb47a</string>
 	<key>SSDKPlatformTypeWechatAppSecret</key>
 	<string>e21e3553124737a8a505ed5ea07c0526</string>
 	<key>SSDKPlatformTypeQQAppId</key>
-	<string>1106339305</string>
+	<string>1106454935</string>
 	<key>SSDKPlatformTypeQQAppKey</key>
-	<string>Uzwp7hq5QqkMQXEk</string>
+	<string>bRyuSQx0YbIdUgMb</string>
 	<key>UMAnalyticsConfigAppKey</key>
 	<string></string>
 	<key>TalkingDataSession</key>
 	<string></string>
-	<key>EasyARAppKey</key>
-	<string>sWYNtkEoedrfTy3DKAKcKXLkMEL0ZmzReTlW9qtTDJi3AMJilp9cSfYmvMQWXAafdn7rIfYYDmYE10t6Ydxec61iasnHztyWdlHw85b059d06cf60d8ae19d64cc1025e567JSAwZaHcBQjMWeZz6FCxxGIVszc2OXYkOAsBONAx7fydAPVGtZsa2U0Eqg0Bst76gZfW</string>
 </dict>
 </plist>
