--- a/ShirokarasNotebook/Info.plist
+++ b/ShirokarasNotebook/Info.plist
@@ -2,8 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>是否允许糖草定位您的位置</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>是否允许糖草定位您的位置</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<string>zh_CN</string>
 	<key>CFBundleDisplayName</key>
 	<string>糖草</string>
 	<key>CFBundleExecutable</key>
