Update - weixin login

--- a/ShirokarasNotebook/Info.plist
+++ b/ShirokarasNotebook/Info.plist
@@ -35,7 +35,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wx823b3364e93fb47a</string>
+				<string>wxb584395fb2e50f8c</string>
 			</array>
 		</dict>
 		<dict>
