--- a/ShirokarasNotebook/environment/client/ShiroKarasClientConfig-Release.plist
+++ b/ShirokarasNotebook/environment/client/ShiroKarasClientConfig-Release.plist
@@ -13,9 +13,9 @@
 	<key>SSDKPlatformTypeSinaWeiboRedirectUri</key>
 	<string>http://www.sharesdk.cn</string>
 	<key>SSDKPlatformTypeWechatAppId</key>
-	<string>wx823b3364e93fb47a</string>
+	<string>wxb584395fb2e50f8c</string>
 	<key>SSDKPlatformTypeWechatAppSecret</key>
-	<string>e21e3553124737a8a505ed5ea07c0526</string>
+	<string>fa57ec44c1dcc9216fb9b620ee5d1267</string>
 	<key>SSDKPlatformTypeQQAppId</key>
 	<string>1106454935</string>
 	<key>SSDKPlatformTypeQQAppKey</key>
