Update - Weibo login

--- a/ShirokarasNotebook/Info.plist
+++ b/ShirokarasNotebook/Info.plist
@@ -62,6 +62,14 @@
 				<string>taobao</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>wb2564292504</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
