--- a/ShirokarasNotebook/environment/server/ShiroKarasServerConfig-Debug.plist
+++ b/ShirokarasNotebook/environment/server/ShiroKarasServerConfig-Debug.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>APPHOST</key>
-	<string>http://tangcao.zhuang-ji.cn</string>
+	<string>https://tangcao.zhuang-ji.cn</string>
 </dict>
 </plist>
